# gthr

./: .gitignore  .gthr.toml  Cargo.toml  LICENSE  README.md  plan.md
.claude/: settings.local.json
.github/workflows/: release.yml
Formula/: gthr.rb
scripts/: build-and-package.sh  update-formula.sh
src/: cli.rs  constants.rs  main.rs
src/config/: settings.rs
src/directory/: mod.rs  state.rs  traversal.rs  tree.rs
src/fuzzy/: filter.rs  matcher.rs  mod.rs
src/output/: formatter.rs  mod.rs  writer.rs
src/ui/: app.rs  colors.rs  events.rs  interface.rs  mod.rs
