[package]
name = "text-ingest-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for directory text ingestion with fuzzy finder capabilities"
license = "MIT"

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"
fuzzy-matcher = "0.3"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
arboard = "3.4"