[package]
name = "gthr"
version = "0.1.1"
edition = "2021"
authors = ["Adarsh Roy <adarshroy.formal@gmail.com>"]
description = "A CLI tool for interactive directory text ingestion with fuzzy finder"
license = "MIT"
repository = "https://github.com/Adarsh-Roy/gthr"
homepage = "https://github.com/Adarsh-Roy/gthr"
documentation = "https://docs.rs/gthr"
readme = "README.md"
keywords = ["cli", "text", "ingest", "fuzzy", "llm", "context"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "gthr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"
fuzzy-matcher = "0.3"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
arboard = "3.4"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.22.0"
